--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.2",
+    "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "next": "12.0.10",
     "react": "17.0.2",
